add align text fix

--- a/src/partialCSS/homepage.scss
+++ b/src/partialCSS/homepage.scss
@@ -60,7 +60,7 @@
 
 @media (max-width: 1024px) {
   .justify-content-sm-center {justify-content: center;}
-  .text-sm-center {text-align: center;}
+  .sm-text-center {text-align: center !important;}
   .sm-mt-0 {margin-top: 0 !important;}
   .ml-\(13\%\) {margin-left: 0%;}
   .mr-\(13\%\) {margin-right: 0%;}
